force-app/main/default/objects/Spread_Extraction_Evidence__c/Spread_Extraction_Evidence__c.object-meta.xml
<CustomObject>
    <description>Extracted text, table, OCR, or key-value evidence from a source document before financial spreading interpretation.</description>
    <label>Spread Extraction Evidence</label>
    <nameField>
        <displayFormat>SEE-{000000}</displayFormat>
        <label>Spread Extraction Evidence Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Spread Extraction Evidence</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>