force-app/main/default/objects/Spread_Extraction_Evidence__c/fields/Evidence_Type__c.field-meta.xml
<CustomField>
    <fullName>Evidence_Type__c</fullName>
    <label>Evidence Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>