force-app/main/default/objects/Spread_Extraction_Evidence__c/fields/Extraction_Confidence__c.field-meta.xml
<CustomField>
    <fullName>Extraction_Confidence__c</fullName>
    <label>Extraction Confidence</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>