force-app/main/default/objects/Spread_Extraction_Evidence__c/fields/Extraction_Engine__c.field-meta.xml
<CustomField>
    <fullName>Extraction_Engine__c</fullName>
    <label>Extraction Engine</label>
    <length>80</length>
    <type>Text</type>
</CustomField>