force-app/main/default/objects/Spread_Extraction_Evidence__c/fields/Pilot_Run__c.field-meta.xml
<CustomField>
    <fullName>Pilot_Run__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pilot Run</label>
    <referenceTo>Spread_Pilot_Run__c</referenceTo>
    <relationshipLabel>Extraction Evidence</relationshipLabel>
    <relationshipName>Run_Extraction_Evidence</relationshipName>
    <type>Lookup</type>
</CustomField>