force-app/main/default/objects/Spread_Extraction_Evidence__c/fields/Raw_Table_Markdown__c.field-meta.xml
<CustomField>
    <fullName>Raw_Table_Markdown__c</fullName>
    <label>Raw Table Markdown</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>