force-app/main/default/objects/Spread_Extraction_Evidence__c/fields/Raw_Text__c.field-meta.xml
<CustomField>
    <fullName>Raw_Text__c</fullName>
    <label>Raw Text</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>