force-app/main/default/objects/Spread_Extraction_Evidence__c/fields/Source_Coordinates__c.field-meta.xml
<CustomField>
    <fullName>Source_Coordinates__c</fullName>
    <label>Source Coordinates</label>
    <length>255</length>
    <type>Text</type>
</CustomField>