force-app/main/default/objects/Spread_Extraction_Evidence__c/fields/Source_Page__c.field-meta.xml
<CustomField>
    <fullName>Source_Page__c</fullName>
    <label>Source Page</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>