force-app/main/default/objects/Spread_Extraction_Evidence__c/fields/Spread_Document__c.field-meta.xml
<CustomField>
    <fullName>Spread_Document__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Spread Document</label>
    <referenceTo>Spread_Document__c</referenceTo>
    <relationshipLabel>Extraction Evidence</relationshipLabel>
    <relationshipName>Extraction_Evidence</relationshipName>
    <type>Lookup</type>
</CustomField>